--- a/src/html/index.html
+++ b/src/html/index.html
@@ -41,7 +41,7 @@
 
     .user-photo, .message-item-photo {
         margin-right: 15px;
-        background: url('./img/no-photo.png');
+        background: url('./no-photo.png');
         background-size: cover;
         border-radius: 50%;
         width: 50px;
